--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,4 +1,4 @@
-hibernate.connection.url=jdbc:mysql://localhost/3306/po_2304
+hibernate.connection.url=jdbc:mysql://localhost:3306/po_2304
 hibernate.connection.username=root
 hibernate.connection.password=
 hibernate.sql=true
